--- a/.spectrwm.conf
+++ b/.spectrwm.conf
@@ -32,8 +32,8 @@ tile_gap		= 20
 # Bar Settings
 bar_enabled		= 1
 bar_border_width	= 1
-bar_border[1]		= white
-# bar_border_unfocus[1]	= rgb:00/40/40
+bar_border[1]		= black
+# bar_border_unfocus[1]	= black
 # bar_color[1]		= black
 # bar_font_color[1]	= rgb:a0/a0/a0
 bar_font		= terminus-9
@@ -86,9 +86,9 @@ modkey = Mod4
 # PROGRAMS
 
 # Validated default programs:
-# program[lock]		= xlock
+program[lock]		= i3lock --color=000000
 program[term]		= xterm
-# program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
+program[menu]		= rofi -show run
 
 # To disable validation of the above, free the respective binding(s):
 # bind[]		= MOD+Shift+Delete	# disable lock
